[package]
name = "wasm_safe_thread"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "A `std::thread` replacement for wasm with proper async integration."
repository = "https://github.com/drewcrawford/wasm_safe_thread"
homepage = "https://sealedabstract.com/code/wasm_safe_thread"
license = "MIT OR Apache-2.0"
keywords = ["thread", "spawn", "wasm", "parallel", "concurrency"]
categories = ["asynchronous", "concurrency", "wasm", "web-programming"]
exclude = [".*"]
rust-version = "1.85.1"


[dependencies]
wasm_safe_mutex = "0.2.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-time = "1"
wasm-bindgen-futures = "0.4.58"
wasm-bindgen = "0.2.108"
js-sys = "0.3.85"


[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.58"
web-sys = { version = "0.3.85", features = ["console"] }
console_error_panic_hook = "0.1.7"


