[package]
name = "wasm_safe_thread"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "Cross-platform std::thread + std::sync replacement for native and wasm32."
repository = "https://github.com/drewcrawford/wasm_safe_thread"
homepage = "https://sealedabstract.com/code/wasm_safe_thread"
license = "MIT OR Apache-2.0"
keywords = ["thread", "mutex", "mpsc", "wasm", "concurrency"]
categories = ["asynchronous", "concurrency", "wasm", "rust-patterns", "web-programming"]
exclude = [".*"]
rust-version = "1.85.1"


[dependencies]
continue = "0.1.1"

[dev-dependencies]
test_executors = "0.4.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-time = "1"
wasm-bindgen-futures = "0.4.58"
wasm-bindgen = "0.2.108"
js-sys = "0.3.85"


[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.58"
web-sys = { version = "0.3.85", features = ["console"] }
console_error_panic_hook = "0.1.7"

[patch.crates-io]
js-sys = { path = "../wasm_ffi/crates/js-sys" }
wasm-bindgen = { path = "../wasm_ffi" }
wasm-bindgen-futures = { path = "../wasm_ffi/crates/futures" }
wasm-bindgen-test = { path = "../wasm_ffi/crates/test" }
web-sys = { path = "../wasm_ffi/crates/web-sys" }
